#8 Add training logs, requirements, and metadata for experiment run
- Created output log file with detailed training and evaluation metrics.
- Added requirements.txt for package dependencies used in the experiment.
- Included wandb-metadata.json to capture environment and configuration details.
- Generated wandb-summary.json for quick access to key metrics.
- Created debug logs for internal tracking and troubleshooting.
- Added a binary file for wandb run metadata.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,16 @@ readme = "README.md"
 authors = [{ name = "Your Name" }]
 dependencies = []
 
+[project.optional-dependencies]
+explain = [
+	"shap",
+	"lime",
+]
+tracking = [
+	"wandb",
+	"mlflow",
+]
+
 [tool.setuptools]
 package-dir = {"" = "src"}
 
