#13 Refactor training and web app scripts for improved readability and consistency
- Cleaned up import statements in train.py and app.py for better organization.
- Enhanced argument parsing in train.py with clearer formatting.
- Improved error handling and warnings for missing profile files in train.py.
- Streamlined dataset tokenization process in train.py.
- Updated JSON dumping for model and label mappings in train.py.
- Refined Streamlit app layout and logic in app.py for better user experience.
- Consolidated and clarified test cases in test_config.py, test_data.py, and test_data_comprehensive.py.
- Enhanced integration tests for configuration and data loading.
- Improved metrics computation tests for clarity and coverage.
- Added missing imports and ensured all modules are tested in test_training.py.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,13 +1,9 @@
 repos:
-  - repo: https://github.com/psf/black
-    rev: 23.9.1
+  - repo: https://github.com/astral-sh/ruff-pre-commit
+    rev: v0.8.4  # Use latest version
     hooks:
-      - id: black
-  - repo: https://github.com/PyCQA/isort
-    rev: 5.12.0
-    hooks:
-      - id: isort
-  - repo: https://github.com/charliermarsh/ruff-pre-commit
-    rev: v0.0.291
-    hooks:
+      # Run linter
       - id: ruff
+        args: [--fix]
+      # Run formatter (replaces Black)
+      - id: ruff-format
