--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -40,34 +40,63 @@ jobs:
         fail_ci_if_error: false
         verbose: true
 
-  lint:
+  # Auto-fix job: Only Ruff now!
+  autofix:
     runs-on: ubuntu-latest
+    if: github.event_name == 'pull_request'
+    permissions:
+      contents: write
 
     steps:
     - uses: actions/checkout@v4
+      with:
+        ref: ${{ github.head_ref }}
+        token: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Set up Python
       uses: actions/setup-python@v5
       with:
         python-version: "3.11"
-        cache: 'pip'
 
-    - name: Install linting tools
-      run: |
-        python -m pip install --upgrade pip
-        pip install ruff black isort mypy
+    - name: Install Ruff
+      run: pip install ruff
 
-    - name: Check code formatting with black
+    - name: Run Ruff formatter and linter
       run: |
-        black --check src/ tests/
-      continue-on-error: true
+        ruff format src/ tests/ scripts/
+        ruff check --fix src/ tests/ scripts/
 
-    - name: Check import sorting with isort
-      run: |
-        isort --check-only src/ tests/
-      continue-on-error: true
+    - name: Commit and push changes
+      uses: stefanzweifel/git-auto-commit-action@v5
+      with:
+        commit_message: "style: auto-format code with ruff"
+        commit_user_name: "github-actions[bot]"
+        commit_user_email: "github-actions[bot]@users.noreply.github.com"
+        skip_dirty_check: false
 
-    - name: Lint with ruff
-      run: |
-        ruff check src/ tests/
-      continue-on-error: true
+  # Lint job: Check for non-fixable issues
+  lint:
+    runs-on: ubuntu-latest
+    needs: [autofix]
+    if: |
+      always() &&
+      (needs.autofix.result == 'success' || needs.autofix.result == 'skipped')
+
+    steps:
+    - uses: actions/checkout@v4
+      with:
+        ref: ${{ github.event_name == 'pull_request' && github.head_ref || github.ref }}
+
+    - name: Set up Python
+      uses: actions/setup-python@v5
+      with:
+        python-version: "3.11"
+
+    - name: Install Ruff
+      run: pip install ruff
+
+    - name: Check formatting
+      run: ruff format --check src/ tests/ scripts/
+
+    - name: Check linting
+      run: ruff check src/ tests/ scripts/
