--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ package-dir = {"" = "src"}
 
 [tool.setuptools.packages.find]
 where = ["src"]
+include = ["fnd*"]
 
 # Ruff configuration (replaces Black + Isort + Flake8)
 [tool.ruff]
