#16 Refactor GitHub Actions workflow and update Python setup for improved consistency and clarity

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,3 +40,6 @@ line-ending = "auto"
 # Isort-compatible import sorting
 known-first-party = ["fnd"]
 section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
+
+[tool.pytest.ini_options]
+pythonpath = ["src"]
