--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,12 +20,19 @@ jobs:
 
       - name: Install dependencies
         run: |
+          python -m pip install --upgrade pip
           pip install -r requirements.txt
+
+      - name: Install package in editable mode
+        run: |
           pip install -e .
 
+      - name: Verify installation
+        run: |
+          python -c "import fnd; print(fnd.__version__)"
+          python -c "from fnd.data.datasets import load_dataset; print('Import successful')"
+
       - name: Run tests
-        env:
-          PYTHONPATH: src
         run: |
           python -m pytest tests/ -v --tb=short --cov=src/fnd --cov-report=term-missing --cov-report=xml
 
