--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,64 @@
 # Python
 __pycache__/
-*.pyc
-*.pyo
-*.pyd
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
 *.egg-info/
+.installed.cfg
+*.egg
+
+# Virtual Environment
 .venv/
-.env
-.pytest_cache/
+venv/
+ENV/
+env/
 
-# Data and artifacts
-data/
-models/
-runs/
-
-# OS/IDE
-.DS_Store
+# IDEs
 .vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Project specific - only ignore root data directory
+/data/
+
+# Jupyter
+.ipynb_checkpoints/
+*.ipynb
+
+# Testing
+.pytest_cache/
+.coverage
+htmlcov/
+*.cover
+.ruff_cache/
+
+# ML/Training outputs
+/runs/
+/models/
+wandb/
+mlruns/
+
+# Logs
+*.log
 
 # Documentation
 docs/AI/
-
-# Linting and formatting
-.ruff_cache/
