--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,118 @@
-torch>=2.0.0
-transformers
-datasets
-scikit-learn
-pandas
-numpy
-matplotlib
-seaborn
-tqdm
 accelerate
-
-streamlit
-fastapi
-uvicorn
-
-requests
-trafilatura
+aiohappyeyeballs==2.6.1
+aiohttp==3.13.1
+aiosignal
+altair
+anyio==4.11.0
+attrs==25.4.0
 beautifulsoup4
-
-python-dotenv
-typer
-pyyaml
-
-# Testing
+blinker==1.9.0
+cachetools==6.2.1
+certifi==2025.10.5
+cffi==2.0.0
+charset-normalizer==2.1.1
+click==8.3.0
+colorama==0.4.6
+contourpy==1.3.2
+coverage==7.11.0
+cryptography
+cycler==0.12.1
+datasets==4.3.0
+dill==0.4.0
+fastapi
+filelock==3.20.0
+fonttools==4.60.1
+frozenlist==1.8.0
+fsspec==2025.9.0
+gitdb==4.0.12
+GitPython==3.1.45
+h11==0.16.0
+hf-xet==1.2.0
+httpcore==1.0.9
+httpx==0.27.2
+huggingface-hub==0.36.0
+idna==3.11
+iniconfig==2.3.0
+isodate==0.7.2
+Jinja2==3.1.6
+joblib==1.5.2
+jsonschema==4.25.1
+jsonschema-specifications==2025.9.1
+kiwisolver==1.4.9
+lime
+lxml==6.0.2
+MarkupSafe==3.0.3
+matplotlib==3.10.7
+multidict==6.7.0
+multiprocess==0.70.16
+narwhals==2.10.0
+numpy==2.2.6
+packaging==25.0
+pandas==2.3.3
+pillow==11.3.0
+platformdirs==4.5.0
+pluggy==1.6.0
+propcache==0.4.1
+protobuf==6.33.0
+pyarrow
+pycparser==2.23
+pydeck==0.9.1
+Pygments==2.19.2
+pyotp==2.8.0
+pyparsing==3.2.5
+pyperclip==1.8.2
+pypng==0.20220715.0
+PyQt5==5.15.9
+PyQt5-Qt5==5.15.17
+PyQt5_sip==12.17.1
+PyQt6==6.7.1
+PyQt6-Qt6==6.7.3
+PyQt6_sip==13.10.2
 pytest
-pytest-cov
-
-# Linting and formatting (Ruff only!)
+pytest-asyncio
+pytest-cov==4.1.0
+python-dateutil==2.9.0.post0
+python-dotenv
+pytz==2025.2
+pyyaml
+PyYAML==6.0.3
+qrcode==7.4.2
+referencing==0.37.0
+regex==2025.10.23
+requests==2.32.5
+requests-file==3.0.1
+requests-toolbelt==1.0.0
+rpds-py==0.28.0
 ruff
-
-# Type stubs
-types-PyYAML
-types-requests
+safetensors==0.6.2
+scikit-learn==1.7.2
+scipy==1.15.3
+seaborn
+setuptools==80.9.0
+shellingham==1.5.4
+six==1.17.0
+smmap==5.0.2
+sniffio==1.3.1
+streamlit==1.50.0
+tenacity==9.1.2
+threadpoolctl==3.6.0
+tokenizers==0.22.1
+toml==0.10.2
+torch
+tornado==6.5.2
+tqdm==4.67.1
+trafilatura
+transformers==4.57.1
+typer
+typer-slim==0.20.0
+typing_extensions
+tzdata==2025.2
+urllib3==1.26.20
+uvicorn
+watchdog==6.0.0
+websockets==13.1
+wheel==0.45.1
+xxhash==3.6.0
+yarl==1.22.0
+zeep==4.3.2
+zxcvbn==4.5.0
